[package]
name = "flight_sql_server"
version.workspace = true
edition.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
description.workspace = true

[dependencies]
tokio = { workspace = true }
arrow-flight = { workspace = true }
liquid-cache-client = { workspace = true }
liquid-cache-common = { workspace = true }


datafusion = { workspace = true }
tonic = { workspace = true, features = ["transport", "tls"] }
log = { workspace = true }
futures = { workspace = true }
prost = { workspace = true }
arrow = { workspace = true }
uuid = { workspace = true }
url = { workspace = true }

dashmap = "6.1.0"
env_logger = "0.11.8"
once_cell = "1.21.3"
clap = { version = "4.5.41", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }

[[bin]]
name = "flight_sql_server"
path = "src/flight_sql.rs"